codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 3971
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Codex to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  / 查看命令                         ! 输入 shell 命令                                              " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (40, " "), (42, " "), (51, " "), (53, " ")]
"  shift + enter 换行                 tab 排队发送消息                                               " Hidden by multi-width symbols: [(17, " "), (19, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " ")]
"  @ 选择文件路径                     ctrl + v 粘贴图片                                              " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (47, " "), (49, " "), (51, " "), (53, " ")]
"  ctrl + g 在外部编辑器中编辑        esc 再按一次编辑上一条消息                                     " Hidden by multi-width symbols: [(12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " "), (60, " "), (62, " ")]
"  ctrl + c 退出                                                                                     " Hidden by multi-width symbols: [(12, " "), (14, " ")]
"  ctrl + t 查看转录                                                                                 " Hidden by multi-width symbols: [(12, " "), (14, " "), (16, " "), (18, " ")]
